# precompiled-clangd-vscode

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
precompiled/: hello.hpp
